# TEMUL

./: .gitattributes  .gitignore  .readthedocs.yaml  Au_NP_example.py  CHANGELOG  Docstring and ideas for code.md  README.md  environment-pyprismatic.yml  file_format_conversion.py  generalised_atom_counting.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
JNB_tutorials/: polarisation_vectors_tutorial.ipynb
code_tutorials/: polarisation_vectors_tutorial.ipynb  polarisation_vectors_tutorial.py
doc/: PTO-Junction_kalani_publication.rst  PTO_Junction_moore.rst  PTO_supercrystal_hadjimichael.rst  api_doc.rst  bfhswbfw.py  conf.py  curvature_marios_publication.rst  define_roles.rst  dg_visualiser_tutorial.rst  index.rst  install.rst  line_profile_tutorial.rst  masked_fft_tutorial.rst  news.rst  polarisation_vectors_tutorial.rst  requirements.txt  structure_map_tutorial copy.py  structure_map_tutorial.rst  using_temul.rst
docs/: PTO_Junction_moore.rst  about_temul_toolkit.rst  api_doc.rst  conf.py  define_roles.rst  index.rst  install.rst  masked_fft_tutorial.rst  polarisation_vectors_tutorial.rst  requirements.txt  structure_map_tutorial.rst  using_temul.rst  workflows.rst
temul/: DPC_4DSTEM.py  Docstring and ideas for code.md  Docstring and ideas for code.py  __init__.py  _version.py  api.py  api_no_prismatic.py  api_with_prismatic.py  atomap_devel_temp.py  dpc_4d_stem.py  dummy_data.py  element_tools.py  everything.py  example_data.py  example_scripts.py  intensity_tools.py  io.py  lattice_structure_tools.py  model_creation.py  model_refinement_class.py  model_refiner.py  my_code_functions_all.py  polarisation.py  signal_plotting.py  signal_processing.py  simulating_and_saving_prismatic.py  simulations.py  spectroscopy.py
tests/: conftest.py  test_element_tools.py  test_intensity_tools.py  test_io.py  test_model_creation.py  test_model_refiner.py  test_model_refiner_active.py  test_polarisation.py  test_polarisation_aliases.py  test_simulations.py  (+8 more)
(+156 files in other folders)
