[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temul-toolkit"
dynamic = ["version"]
description = "Functions for analysis of high resolution electron microscopy and spectroscopy data."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "GPL v3"}
authors = [
  {name = "Eoghan N O'Connell", email = "eoclives@hotmail.com"},
]
keywords = [
  "STEM",
  "data analysis",
  "microscopy",
  "data science",
  "image simulation",
  "atomic models",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "atomap",
  "colorcet",
  "glob2",
  "hyperspy",
  "numpy",
  "matplotlib",
  "matplotlib-scalebar",
  "pandas",
  "periodictable",
  "scikit-image",
  "scipy",
  "tifffile",
  "tqdm",
]

[project.urls]
Homepage = "https://temul-toolkit.readthedocs.io/"
Documentation = "https://temul-toolkit.readthedocs.io/"

[tool.setuptools]
include-package-data = true
packages = [
  "temul",
  "temul.topotem",
  "temul.example_data.experimental",
  "temul.example_data.prismatic",
  "temul.example_data.structures",
  "temul.external.atomap_devel_012",
  "temul.external.atomap_devel_012.external",
  "temul.external.skimage_devel_0162",
]

[tool.setuptools.dynamic]
version = {attr = "temul._version.version"}

[tool.setuptools.package-data]
"temul.example_data.experimental" = [
  "example_Au_nanoparticle.emd",
  "example_Se_implanted_MoS2.dm3",
]
"temul.example_data.prismatic" = [
  "example_MoS2_vesta_xyz.xyz",
  "MoS2_hex_prismatic.xyz",
  "calibrated_data_probeStep0.01_interpolationFactor4_crop0.5.hspy",
]
"temul.example_data.structures" = [
  "example_Cu_nanoparticle_sim.hspy",
]
